<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="assignement.ulrick.ferret.calculator.MainActivity">


    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/GridLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="4"
        android:orientation="horizontal"
        tools:context=".GridXMLActivity" >
        <Button
            android:id="@+id/button1"
            android:layout_gravity="left|top"
            android:onClick="clickTouch"
            android:text="1" />

        <Button
            android:id="@+id/button2"
            android:layout_gravity="left|top"
            android:onClick="clickTouch"
            android:text="2" />

        <Button
            android:id="@+id/button3"
            android:layout_gravity="left|top"
            android:onClick="clickTouch"
            android:text="3" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_gravity="left|top"
            android:onClick="clickTouch"
            android:text="+" />

        <Button
            android:id="@+id/button4"
            android:layout_gravity="left|top"
            android:onClick="clickTouch"
            android:text="4" />

        <Button
            android:id="@+id/button5"
            android:layout_gravity="left|top"
            android:onClick="clickTouch"
            android:text="5" />

        <Button
            android:id="@+id/button6"
            android:layout_gravity="left|top"
            android:onClick="clickTouch"
            android:text="6" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_gravity="left|top"
            android:onClick="clickTouch"
            android:text="-" />

        <Button
            android:id="@+id/button7"
            android:layout_gravity="left|top"
            android:onClick="clickTouch"
            android:text="7" />

        <Button
            android:id="@+id/button8"
            android:layout_gravity="left|top"
            android:onClick="clickTouch"
            android:text="8" />


        <Button
            android:id="@+id/button9"
            android:layout_gravity="left|top"
            android:onClick="clickTouch"
            android:text="9" />

        <Button
            android:id="@+id/buttonMult"
            android:layout_gravity="left|top"
            android:onClick="clickTouch"
            android:text="*" />

        <Button
            android:id="@+id/buttonParO"
            android:layout_gravity="left|top"
            android:onClick="clickTouch"
            android:text="(" />

        <Button
            android:id="@+id/button0"
            android:layout_gravity="left|top"
            android:onClick="clickTouch"
            android:text="0" />

        <Button
            android:id="@+id/buttonParC"
            android:layout_gravity="left|top"
            android:onClick="clickTouch"
            android:text=")" />

        <Button
            android:id="@+id/buttonDiv"
            android:layout_gravity="left|top"
            android:onClick="clickTouch"
            android:text="/" />



    </GridLayout>

    <Button
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="calculate"
        android:text="="/>

    <Button
        android:id="@+id/clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clear"
        android:text="CLEAR"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:text=""
        android:layout_gravity="center"
        android:textSize="32dp" />

</LinearLayout>
